integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__feat_grand_total.snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "grand_total": 3,
  "total": 1,
  "limit": 1,
  "page": 1,
  "items": [
    {
      "interface": "V1_NFT",
      "id": "BE2p3VKkJaww1vH885ZTXLctGByi5VhSjdU8RJ8jDTEv",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://nftstorage.link/ipfs/bafkreifpraqm4oiwjovrmvwm3nsk6wpsobp3kcm4pmlkkyiotslk2twtrq",
        "files": [],
        "metadata": {
          "name": "Inner Folder",
          "symbol": "WNFT",
          "token_standard": "NonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "5wXodfWQdwn7RnbbzjqUYGpyndViCMPqFUqq1Xoa6hj9",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": true,
        "data_hash": "w3ZuuF4QTBNCNhJSeqfbq2Mr61aYeTohzJ1AwaKbabx",
        "creator_hash": "FPHR7CZwP8P3t8v3oe59yFK15M7M1MKrkASq9M3cCbZW",
        "asset_hash": "8Ty4WgH777jfyXTHqnwGU5xrMyLmwtVibu1NPTs2vXoM",
        "tree": "D2BBXtHRCR42fAgNDiE6xKANq927L8VcmbP8PzA8bjaQ",
        "seq": 7,
        "leaf_id": 6
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "7yvu7Ut65f9mfUyk9HQL7EEqzNfyyp2nbBuEjvY4fyqZ"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [
        {
          "address": "5chRAL4VyX6Sn3EHSqtDzxvVcS1xa5GkFx6B4hgsCDXj",
          "share": 100,
          "verified": true
        }
      ],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "3bRrZq6MoSAWYXHPNvhLAHZQw2qVv6bd37snbNT2e1ZN"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false
    }
  ]
}
