integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__feat_search_assets_collections-no_collection.snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 2,
  "limit": 5,
  "page": 1,
  "items": [
    {
      "interface": "ProgrammableNFT",
      "id": "JEJcxTTqXqzQj1QnaGTSVDrTyQhX5tyfE72yMtiHd1sc",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://maker.macks.gg/macks/3991.json",
        "files": [],
        "metadata": {
          "name": "MACK #3991",
          "symbol": "MACK",
          "token_standard": "ProgrammableNonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "mackxjTrPyxrr6wcs1aKUammKXi4TpH6LZTt5h4tsp8",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "3wsSCebzay39pghBbwzdaRytPCHbAmb33VDMP3p8XF4i"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.05,
        "basis_points": 500,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "Hh4xBKHrcnYZk8h7gS1goHuNutjbcxPDUD3zjxdanaeT",
          "share": 0,
          "verified": true
        },
        {
          "address": "mackxjTrPyxrr6wcs1aKUammKXi4TpH6LZTt5h4tsp8",
          "share": 100,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": true,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "4zdNGgAtFsW1cQgHqkiWyRsxaAgxrSRRynnuunxzjxue"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "BSJ6oYuxKtNtQLrE5e9cbnVy9Yu7xe1CePMdeJP9Fpyk"
      }
    },
    {
      "interface": "ProgrammableNFT",
      "id": "JEFgYVM4zRYpyV95aTd5dkGMHHRaERcLbrCa4629YRsW",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://arweave.net/aZdo1Lz7xa_gAY1S-Z_K7CWLqGMNH8tEHial1SUGWU4",
        "files": [],
        "metadata": {
          "name": "Taurus Guard #5486",
          "symbol": "GCTAURUS",
          "token_standard": "ProgrammableNonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "DjuBPscD6aUBEwxURCWSw3tXXmEYocW337XPsiRTCem",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "6rFsCBs19xSaBRGCwTFy877gXHwkHozNa1sQ4f9jYwNy"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.030000000000000002,
        "basis_points": 300,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [
        {
          "address": "DjuBPscD6aUBEwxURCWSw3tXXmEYocW337XPsiRTCem",
          "share": 50,
          "verified": true
        },
        {
          "address": "9ZNNi2eSTwkdKatykNymZdTEzYW1Z8b9VJEzqBrfAawx",
          "share": 50,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": true,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "4zdNGgAtFsW1cQgHqkiWyRsxaAgxrSRRynnuunxzjxue"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "GnVKUTTiABk9FTCJRdFbu5v7wtMQJWTBXNETWCjcUhmF"
      }
    }
  ]
}
