integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__feat_search_assets_negation-without_negation.snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "grand_total": 6,
  "total": 1,
  "limit": 1,
  "page": 1,
  "items": [
    {
      "interface": "V1_NFT",
      "id": "BPwp56FnJyvRaNeMJnNEvhxP1g7vdFmsnY6PCBVqZ5mv",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://cdn.stylishstuds.io/1m/1.png",
        "files": [],
        "metadata": {
          "name": "Horse 1",
          "symbol": "RACE",
          "token_standard": "NonFungible"
        },
        "links": {
          "image": "https://cdn.stylishstuds.io/1m/1.png"
        }
      },
      "authorities": [
        {
          "address": "Cg47voSKwKfy66fhKa6iVssw2sc4TnVpL2pnjkqLGRL1",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": true,
        "data_hash": "889SAMf86cZqp6PQSLXeRTQ3hKgpS6Qqu2NEs3w5FCVy",
        "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
        "asset_hash": "2rsvjHmjaVxqyUm5JwYmgjYSQoKbWKZLqnuxKYTP7h3D",
        "tree": "TREHSs6fZ5d21kybxtjiJtjKhSjtuZhQV7itQCkRz4o",
        "seq": 1,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "CLXKiX3tyaenUK5GXiNUgUFRTfp4YPqYGXSLXUxQ7G8A"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.05,
        "basis_points": 500,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "CNFTteLrtNChJfqPtPxn8NSJJi9JebtvPbL4egUCLr8v"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": null
      },
      "mutable": true,
      "burnt": false
    }
  ]
}
