integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__pricing_incorporation-show-zero-balance-false-"fungible".snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 2,
  "limit": 1000,
  "cursor": "jtojtomepa8beP8AuQc6eXt5FriJwfFMwQx2v2f9mCL",
  "items": [
    {
      "interface": "FungibleToken",
      "id": "4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [
          {
            "uri": "https://raw.githubusercontent.com/solana-labs/token-list/main/assets/mainnet/4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R/logo.png",
            "mime": "image/png"
          }
        ],
        "metadata": {},
        "links": {
          "image": "https://raw.githubusercontent.com/solana-labs/token-list/main/assets/mainnet/4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R/logo.png"
        }
      },
      "authorities": [],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "9WzDXwBbmkg8ZTbNMqUxvQRAyrZzDsGYdLVL9zYtAWWM"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "token_accounts": [
          {
            "address": "GXanGGy8srBiAVt8Fvj7ZuSQ9tqTZtRVZ9uUGq5RZc9e",
            "balance": 38273191115620
          }
        ],
        "symbol": "RAYDIUM",
        "balance": 38273191115620,
        "supply": 554999343408058,
        "decimals": 6,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "GXanGGy8srBiAVt8Fvj7ZuSQ9tqTZtRVZ9uUGq5RZc9e",
        "price_info": {
          "price_per_token": 3.0,
          "total_price": 114819573.34686,
          "currency": "USDC"
        }
      }
    },
    {
      "interface": "FungibleToken",
      "id": "jtojtomepa8beP8AuQc6eXt5FriJwfFMwQx2v2f9mCL",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [],
        "metadata": {},
        "links": {}
      },
      "authorities": [],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "9WzDXwBbmkg8ZTbNMqUxvQRAyrZzDsGYdLVL9zYtAWWM"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "token_accounts": [
          {
            "address": "Es11aV9LTeSchn4dJoZxGsjjpFtxWnZ6L8UwDfwRCFc",
            "balance": 41231672630000000
          }
        ],
        "symbol": "JITO",
        "balance": 41231672630000000,
        "supply": 999999992238689351,
        "decimals": 9,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "Es11aV9LTeSchn4dJoZxGsjjpFtxWnZ6L8UwDfwRCFc",
        "price_info": {
          "price_per_token": 2.0,
          "total_price": 82463345.26,
          "currency": "USDC"
        }
      }
    }
  ]
}
