integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__pricing_incorporation-show-zero-balance-false-"regularNft".snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 1,
  "limit": 1000,
  "cursor": "NVguVfNBPoDUncBjCPJvnwvAAVPRcJRC42JXZRFNZ2Q",
  "items": [
    {
      "interface": "V1_NFT",
      "id": "NVguVfNBPoDUncBjCPJvnwvAAVPRcJRC42JXZRFNZ2Q",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://nftstorage.link/ipfs/bafybeicmw55fuyapfm3p2y54gvkkkbewawzc7hft5mafvs4fyryogvgwl4/4.json",
        "files": [],
        "metadata": {
          "name": "",
          "symbol": "Dino",
          "token_standard": "NonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "FHz2MnMugJZmMkvY27tTDHurcZqwCcoXxi2rC59cPdve",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.02,
        "basis_points": 200,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "FHz2MnMugJZmMkvY27tTDHurcZqwCcoXxi2rC59cPdve",
          "share": 0,
          "verified": true
        },
        {
          "address": "rWbWjoEi1poTZN8LJYeTZo1xXN2NRT9EVt3szpSBhP6",
          "share": 50,
          "verified": false
        },
        {
          "address": "GFf2erfGLdbeWcfyDqxBogsieFrqNaBsuZ84hoznaA2G",
          "share": 50,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "9WzDXwBbmkg8ZTbNMqUxvQRAyrZzDsGYdLVL9zYtAWWM"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 255
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "AJ2kc4ezF3TUT3gZQ2ztzBpAixuoneYLhaQZLYHz6Qqb"
      }
    }
  ]
}
