integration_tests/tests/integration_tests/snapshots/integration_tests__general_scenario_tests__pricing_incorporation-show-zero-balance-true-"all".snap
---
source: integration_tests/tests/integration_tests/general_scenario_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 4,
  "limit": 1000,
  "cursor": "NVguVfNBPoDUncBjCPJvnwvAAVPRcJRC42JXZRFNZ2Q",
  "items": [
    {
      "interface": "V1_NFT",
      "id": "94WpxCmtoutLHy43Pdz185SNyVqybc1wVAWsXEJ78dUk",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://www.hi-hi.vip/json/jup555.json",
        "files": [],
        "metadata": {
          "name": "🎁2.0 Jupiter AirDrop",
          "symbol": "Jup2.0",
          "token_standard": "NonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "CZdADtH3vrUA7J1DWiycnnavN9mnvSvXQGYkYVL5r8yg",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": true,
        "data_hash": "B3ErH6VpzN2DN1NKETZVBSquXNvL9kzaXMDpYi788D9R",
        "creator_hash": "76gtt9R6YAjXWrMbTiQ2e85NmAgTXUjS3sx5jUQKTXuF",
        "asset_hash": "2kmsHVdVyeCEvxmCVeFrsiZ1u2cHHe2q9zahj1GRv5xW",
        "tree": "CKEUURpXfbX1v8tS4ykBJpkyn5GCqyeM2s6JxDB5HduF",
        "seq": 2283968,
        "leaf_id": 2275931
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "FkKmC7dXsJP7rfcaRso9dWpLDQ1AbBt6iQXYovAPNexf"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [
        {
          "address": "8jCbdWzyEfJsjgKj3ua3JJNHKXuvSURvtpC5aE53SMZm",
          "share": 100,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": false,
        "delegated": true,
        "delegate": "B8TRtut3giumau5eXZ5Mk3deY4D3uXzbkHcTERePMGLj",
        "ownership_model": "single",
        "owner": "9WzDXwBbmkg8ZTbNMqUxvQRAyrZzDsGYdLVL9zYtAWWM"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 0
      },
      "mutable": true,
      "burnt": false
    },
    {
      "interface": "FungibleToken",
      "id": "4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [
          {
            "uri": "https://raw.githubusercontent.com/solana-labs/token-list/main/assets/mainnet/4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R/logo.png",
            "mime": "image/png"
          }
        ],
        "metadata": {},
        "links": {
          "image": "https://raw.githubusercontent.com/solana-labs/token-list/main/assets/mainnet/4k3Dyjzvzp8eMZWUXbBCjEvwSkkk59S5iCNLY3QrkX6R/logo.png"
        }
      },
      "authorities": [],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "9WzDXwBbmkg8ZTbNMqUxvQRAyrZzDsGYdLVL9zYtAWWM"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "token_accounts": [
          {
            "address": "GXanGGy8srBiAVt8Fvj7ZuSQ9tqTZtRVZ9uUGq5RZc9e",
            "balance": 38273191115620
          }
        ],
        "symbol": "RAYDIUM",
        "balance": 38273191115620,
        "supply": 554999343408058,
        "decimals": 6,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "GXanGGy8srBiAVt8Fvj7ZuSQ9tqTZtRVZ9uUGq5RZc9e",
        "price_info": {
          "price_per_token": 3.0,
          "total_price": 114819573.34686,
          "currency": "USDC"
        }
      }
    },
    {
      "interface": "FungibleToken",
      "id": "jtojtomepa8beP8AuQc6eXt5FriJwfFMwQx2v2f9mCL",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [],
        "metadata": {},
        "links": {}
      },
      "authorities": [],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "9WzDXwBbmkg8ZTbNMqUxvQRAyrZzDsGYdLVL9zYtAWWM"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "token_accounts": [
          {
            "address": "Es11aV9LTeSchn4dJoZxGsjjpFtxWnZ6L8UwDfwRCFc",
            "balance": 41231672630000000
          }
        ],
        "symbol": "JITO",
        "balance": 41231672630000000,
        "supply": 999999992238689351,
        "decimals": 9,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "Es11aV9LTeSchn4dJoZxGsjjpFtxWnZ6L8UwDfwRCFc",
        "price_info": {
          "price_per_token": 2.0,
          "total_price": 82463345.26,
          "currency": "USDC"
        }
      }
    },
    {
      "interface": "V1_NFT",
      "id": "NVguVfNBPoDUncBjCPJvnwvAAVPRcJRC42JXZRFNZ2Q",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://nftstorage.link/ipfs/bafybeicmw55fuyapfm3p2y54gvkkkbewawzc7hft5mafvs4fyryogvgwl4/4.json",
        "files": [],
        "metadata": {
          "name": "",
          "symbol": "Dino",
          "token_standard": "NonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "FHz2MnMugJZmMkvY27tTDHurcZqwCcoXxi2rC59cPdve",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.02,
        "basis_points": 200,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "FHz2MnMugJZmMkvY27tTDHurcZqwCcoXxi2rC59cPdve",
          "share": 0,
          "verified": true
        },
        {
          "address": "rWbWjoEi1poTZN8LJYeTZo1xXN2NRT9EVt3szpSBhP6",
          "share": 50,
          "verified": false
        },
        {
          "address": "GFf2erfGLdbeWcfyDqxBogsieFrqNaBsuZ84hoznaA2G",
          "share": 50,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "9WzDXwBbmkg8ZTbNMqUxvQRAyrZzDsGYdLVL9zYtAWWM"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 255
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "token_accounts": [
          {
            "address": "AJ2kc4ezF3TUT3gZQ2ztzBpAixuoneYLhaQZLYHz6Qqb",
            "balance": 1
          }
        ],
        "balance": 1,
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "AJ2kc4ezF3TUT3gZQ2ztzBpAixuoneYLhaQZLYHz6Qqb",
        "mint_authority": "54Lh6tjBAM3tGaBBDwr5M8J6BEbZNHfSmq1YaBvmGuqK",
        "freeze_authority": "54Lh6tjBAM3tGaBBDwr5M8J6BEbZNHfSmq1YaBvmGuqK"
      }
    }
  ]
}
